--- a/Web/Views/Shared/_BaseLayout.cshtml
+++ b/Web/Views/Shared/_BaseLayout.cshtml
@@ -1,9 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+    string title = (!String.IsNullOrEmpty(ViewBag.Title) ? $"{ViewBag.Title} - " : String.Empty) + Settings.CompanyName;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - @Settings.CompanyName</title>
+    <title>@title</title>
     @System.Web.Optimization.Styles.Render("~/Css/_BaseLayout")
     @System.Web.Optimization.Scripts.Render("~/Js/_BaseLayout")
 </head>
