--- a/Web/Views/Attribute/Edit.cshtml
+++ b/Web/Views/Attribute/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model RecordLabel.Content.Metadata.Attribute
 
+@System.Web.Optimization.Styles.Render("~/Css/Edit")
 @System.Web.Optimization.Scripts.Render("~/Js/Metadata/Edit")
 
 @{
