--- a/Web/Views/Shared/EditorTemplates/Track.cshtml
+++ b/Web/Views/Shared/EditorTemplates/Track.cshtml
@@ -9,7 +9,7 @@
 
     <label class="control-label col-md-2">Reference</label>
     <div class="reference-view-line key-value frame col-md-10 input-group">
-        <span class="text-muted input-group-addon">@(Model?.Reference?.Text)</span>:<span class="val label form-control"><a href="@(Model?.Reference?.Target)" class="">@(Model?.Reference?.DisplayAs)</a></span> <div class="glyphicon"><button type="button" class="glyphicon-pencil btn btn-default" onclick="editreference(this);"></button></div>
+        <span class="text-muted input-group-addon">@(Model?.Reference?.Text)</span>:<span class="val label form-control"><a href="@(Model?.Reference?.DisplayAs)" class="">@(Model?.Reference?.Target)</a></span> <div class="glyphicon"><button type="button" class="glyphicon-pencil btn btn-default" onclick="editreference(this);"></button></div>
     </div>
     <div class="reference-edit simply-hide frame col-md-10">
         @Html.EditorFor(model => model.Reference)
