--- a/Web/Views/Shared/ExtensionPartials/Template.cshtml
+++ b/Web/Views/Shared/ExtensionPartials/Template.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecordLabel.Content.Entity
+﻿@model RecordLabel.Content.EntityBase
 
 @{
     bool isTemplate = Html.ViewData["isTemplate"] as bool? ?? false;
