--- a/Web/Content/Views/Shared/Common.css
+++ b/Web/Content/Views/Shared/Common.css
@@ -337,6 +337,9 @@ a.label-my:active,
     font-style: italic;
 }
 
+.normal-weight {
+    font-weight: normal;
+}
 
 ul.plain-list {
     list-style-type: none;
@@ -351,10 +354,6 @@ ul.plain-list {
 .mouse-pointer {
     cursor: pointer;
 }
-
-/*.release-page .key-value .key > span:first-child {
-    font-weight: bold;
-}*/
 
 .key-value span.val {
     font-weight: bold;
@@ -393,7 +392,7 @@ footer, .footer-margin {
 
 
 
-/*Dangus Theme*/
+/*An other theme*/
 /*body {
     background-color: #717A67 !important;
 }
