--- a/Web/Content/bootstrap.css
+++ b/Web/Content/bootstrap.css
@@ -1677,11 +1677,11 @@ legend {
   border-bottom: 1px solid #e5e5e5;
 }
 
-label {
+/*label {
   display: inline-block;
   margin-bottom: 5px;
   font-weight: bold;
-}
+}*/
 
 input[type="search"] {
   -webkit-box-sizing: border-box;
