--- a/Web/Views/Artist/List.cshtml
+++ b/Web/Views/Artist/List.cshtml
@@ -4,7 +4,7 @@
 
 @{
     Layout = "~/Views/Shared/_ListLayout.cshtml";
-    ViewBag.Title = "Artists";
+    ViewBag.Title = RecordLabel.Web.Localization.ApplicationLocalization.Artists;
     bool adminMode = Global.IsAdminMode;
 }
 
