--- a/Web/Views/MediaType/List.cshtml
+++ b/Web/Views/MediaType/List.cshtml
@@ -6,7 +6,7 @@
 
 @{
     Layout = "~/Views/Shared/_ListLayout.cshtml";
-    ViewBag.Title = "Media Types";
+    ViewBag.Title = RecordLabel.Content.Localization.ContentLocalization.MediaTypes;
 }
 
 <ul class="plain-list">
