--- a/Web/Views/Shared/DisplayTemplates/Artist.cshtml
+++ b/Web/Views/Shared/DisplayTemplates/Artist.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Artist";
 }
 
+@*This pages is under construction since it's unknown how it's supposed to look yet*@
+
 <link rel="stylesheet" type="text/css" href="~/Content/Custom/Lists.css"/>
 
 @*TODO: Take care of styles and move it out to an external file*@
