--- a/Web/Views/Shared/Error.cshtml
+++ b/Web/Views/Shared/Error.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Error";
+    ViewBag.Title = RecordLabel.Web.Localization.ApplicationLocalization.PageTitle_Error;
 }
 
 <div class="content">
