--- a/Web/Views/Artist/Edit.cshtml
+++ b/Web/Views/Artist/Edit.cshtml
@@ -1,4 +1,7 @@
 ﻿@using RecordLabel.Content
+@using RecordLabel.Content.Localization
+@using RecordLabel.Web.Localization
+
 @model Artist
 
 @System.Web.Optimization.Styles.Render("~/Css/EditWithImages")
@@ -36,7 +39,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("ReleaseIds", "Releases", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("ReleaseIds", ApplicationLocalization.Releases, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.ListBox("ReleaseIds", null, htmlAttributes: new { @class = "form-control" })
             </div>
@@ -47,17 +50,17 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2">References</label>
+            <label class="control-label col-md-2">@ContentLocalization.References</label>
             <div class="col-md-10">
-                @Html.ModalOpenButton("ReferencesModal", "Edit References")
+                @Html.ModalOpenButton("ReferencesModal", AdminApplicationLocalization.Edit_EditReferences)
             </div>
         </div>
 
         <div>
             @{
                 MvcHtmlString refEditor = Html.EditorForASet<Artist, ReferenceSet, Reference>(model => model.References, "ModelReferences");
-                MvcHtmlString addRefBtn = Html.ButtonForModal("Add Reference", null, "addReferenceBtn");
-                @Html.ModalDialog("ReferencesModal", refEditor, "References", addRefBtn);
+                MvcHtmlString addRefBtn = Html.ButtonForModal(AdminApplicationLocalization.Edit_AddReference, null, "addReferenceBtn");
+                @Html.ModalDialog("ReferencesModal", refEditor, ContentLocalization.References, addRefBtn);
             }
         </div>
 
@@ -68,7 +71,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-success" />
-                @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default", role = "button" })
+                @Html.ActionLink(ApplicationLocalization.Cancel, "Index", null, new { @class = "btn btn-default", role = "button" })
             </div>
         </div>
     </div>
@@ -80,4 +83,4 @@
     @(Html.EditorTemplateFor(model => model.References.Collection))
 </div>
 
-@Html.BackButtonBar("Back to Artists")
+@Html.BackButtonBar(AdminApplicationLocalization.Edit_BackToArtists)
