--- a/Web/Views/Admin/Login.cshtml
+++ b/Web/Views/Admin/Login.cshtml
@@ -1,19 +1,19 @@
-﻿@model RecordLabel.Web.LoginData
+﻿@using RecordLabel.Web.Localization
+
+@model RecordLabel.Web.LoginData
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = AdminApplicationLocalization.LogIn;
 }
 
-<h2>Login</h2>
+<h2>@AdminApplicationLocalization.LogIn</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>LoginData</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, String.Empty, new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -42,12 +42,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@AdminApplicationLocalization.LogIn" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(AdminApplicationLocalization.BackToList, "Index")
 </div>
