--- a/Web/Content/Views/Shared/Common.css
+++ b/Web/Content/Views/Shared/Common.css
@@ -101,7 +101,8 @@
     /*padding: 5px;*/   
 }
 .frame:hover,
-.label2.invert:hover {
+.label2.invert:hover,
+.label-wrap.invert:hover {
     background-color: #f9f9f6; /* #f7f7f7;*/ /*#f9f9f6;*/ /*whitesmoke;*/
 }
 .frame.shadow-box:hover,
@@ -240,9 +241,11 @@ a.default-text-style:active {
 .label-container .label,
 .label-container .label2,
 .label-container .label-my,
+.label-container .label-wrap,
 .contains-labels .label,
 .contains-labels .label2,
-.contains-labels .label-my {
+.contains-labels .label-my,
+.contains-labels .label-wrap {
     margin-top: 5px;
 }
 
@@ -259,7 +262,12 @@ a.label2,
 a.label2:hover,
 a.label2:active,
 a.label2[href]:hover,
-a.label2[href]:active {
+a.label2[href]:active,
+a.label-wrap,
+a.label-wrap:hover,
+a.label-wrap:active,
+a.label-wrap[href]:hover,
+a.label-wrap[href]:active {
     color: #008f8f;
     /*color: #428bca;*/
     /* color: #00755e; */
@@ -268,6 +276,8 @@ a.label2:hover,
 a.label2:active,
 a.label-my:hover,
 a.label-my:active,
+a.label-wrap:hover,
+a.label-wrap:active,
 .list-item:hover {
     /*background-color: #e1e6ef;*/
     background-color: #ebebeb; /*bootstrap color*/
@@ -312,7 +322,6 @@ a.label-my:active,
 .thumb1 img {
     width: 150px;
 }
-
 
 /*GENERIC ONE-LINERS*/
 .hide-overflow {
@@ -382,14 +391,17 @@ footer {
 }
 /*set footer to auto height depending on viewport height with min and max values*/
 /*footer-margin element to prevent footer from hiding content*/
-footer, .footer-margin {
+footer,
+.footer-margin {
     height: 8vh;
     /* height: 4em; */
     min-height: 1.5em;
     max-height: 4em;
 }
 
-
+footer > .container {
+    padding-top: 0.5em;
+}
 
 
 /*An other theme*/
