--- a/Web/Views/Articles/View.cshtml
+++ b/Web/Views/Articles/View.cshtml
@@ -43,7 +43,7 @@
                         <div class="text-muted">Links</div>
                         @foreach (Reference item in references)
                         {
-                            <a href="@item.TargetUrl" target="_blank" class="label-my border">@item.Text</a>
+                            <a href="@item.TargetUrl" target="_blank" class="label2 invert2 border">@item.Text</a>
                         }
                     </section>
                 }
@@ -84,7 +84,7 @@
                         <div class="text-muted">Links</div>
                         @foreach (Reference item in references)
                         {
-                            <a href="@item.TargetUrl" class="label-my border">@item.Text</a>
+                            <a href="@item.TargetUrl" class="label2 invert2 border">@item.Text</a>
                         }
                     </section>
                 }
