--- a/Web/Views/Shared/DisplayTemplates/AttributeSet.cshtml
+++ b/Web/Views/Shared/DisplayTemplates/AttributeSet.cshtml
@@ -2,5 +2,5 @@
 
 @foreach (RecordLabel.Content.Metadata.Attribute item in Model.Collection.OrderBy(item => item.Type))
 {
-    <a class="label-my border" href="#">@item.Text</a>
+    <a class="label2 invert2 border" href="#">@item.Text</a>
 }
