Fixed some broken links and added a placeholder TBD view

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                         }
                     </ul>
                     <ul>
-                        <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.Home_MoreNews, "Index", "Articles", new { area = "" })</li>
+                        <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.Home_MoreNews, "Index", "Articles")</li>
                     </ul>
                 </div>
             </section>
@@ -68,7 +68,7 @@
                     <ul class="front-page-menu">
                         <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.NavSection_Releases, "Index", "Release")</li>
                         <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.NavSection_Ordering, "Ordering", "Home")</li>
-                        <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.NavSection_Contact, "Index", "Home")</li>
+                        <li class="btn menu-btn">@Html.ActionLink(ApplicationLocalization.NavSection_Contact, "Contact", "Home")</li>
                     </ul>
                 </nav>
             </section>
